--- a/assets/static/sass/helper/_variables.scss
+++ b/assets/static/sass/helper/_variables.scss
@@ -54,6 +54,7 @@ $postpage-link-color: rgb(27, 177, 89);
 $postpage-quote-color: rgb(66, 177, 112);
 $postpage-quote-header-color: rgb(66, 177, 158);
 $postpage-quote-marker-color: rgb(59, 128, 43);
+$postpage-quote-strong-color: rgb(177, 104, 76);
 $postpage-tag-border-color: rgb(102, 212, 138);
 $postpage-tag-color: rgb(217, 247, 215);
 $postpage-tag-hover-color: rgb(228, 252, 227);
