--- a/assets/static/sass/helper/_font.scss
+++ b/assets/static/sass/helper/_font.scss
@@ -5,7 +5,16 @@
     url(https://cdn.jsdelivr.net/gh/max32002/FakePearl@1.1/webfont/FakePearl-Light.woff)
       format("woff");
 
-  font-weight: normal;
+  font-weight: 400;
+}
+@font-face {
+  font-family: FakePearl;
+  src: url(https://cdn.jsdelivr.net/gh/max32002/FakePearl@1.1/webfont/FakePearl-Regular.woff2)
+      format("woff2"),
+    url(https://cdn.jsdelivr.net/gh/max32002/FakePearl@1.1/webfont/FakePearl-Regular.woff)
+      format("woff");
+
+  font-weight: 500;
 }
 @font-face {
   font-family: FakePearl;
@@ -14,5 +23,5 @@
     url(https://cdn.jsdelivr.net/gh/max32002/FakePearl@1.1/webfont/FakePearl-Medium.woff)
       format("woff");
 
-  font-weight: bold;
+  font-weight: 700;
 }
