--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="{{ '/static/style.css'|url }}">
   <link rel="preconnect" href="https://fonts.gstatic.com"/>
   <link
-    href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;600&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;700&display=swap"
     rel="stylesheet"
   />
   <link
