[UPDATE] styles for table

--- a/assets/static/sass/_style.scss
+++ b/assets/static/sass/_style.scss
@@ -36,6 +36,7 @@
 @import "./components/post/modal";
 @import "./components/post/tag";
 @import "./components/post/comments";
+@import "./components/post/table";
 
 @import "./components/portfolio/banner";
 
