--- a/assets/static/sass/helper/_variables.scss
+++ b/assets/static/sass/helper/_variables.scss
@@ -58,6 +58,8 @@ $postpage-quote-strong-color: rgb(177, 104, 76);
 $postpage-tag-border-color: rgb(102, 212, 138);
 $postpage-tag-color: rgb(217, 247, 215);
 $postpage-tag-hover-color: rgb(228, 252, 227);
+$postpage-table-th-color: rgb(67, 116, 155);
+$postpage-table-td-color: rgb(182, 212, 236);
 
 $portfolio-banner-color1: rgb(255, 151, 103);
 $portfolio-banner-color2: rgb(255, 253, 158);
