[MISC] fix typo

--- a/templates/home.html
+++ b/templates/home.html
@@ -76,7 +76,7 @@
         </div>
         <div class="card project-card">
           <h3>Projects</h3>
-          <p class="preview">Comming soon</p>
+          <p class="preview">Coming soon</p>
         </div>
       </div>
     </section>
