--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -2,7 +2,7 @@
 {% block title %}Portfolio - skyblog{% endblock %}
 
 {% block banner %}
-  <h1>Comming Soon</h1>
+  <h1>Coming Soon</h1>
 {% endblock %}
 
 {% block main %}
