--- a/assets/static/sass/helper/_variables.scss
+++ b/assets/static/sass/helper/_variables.scss
@@ -103,6 +103,7 @@ $title-font: "Exo 2", "Maven Pro", "Noto Sans TC", sans-serif;
 $icon-font: "Font Awesome 5 Free", "Maven Pro", "Noto Sans TC", sans-serif;
 
 $brk-x-huge: 1296px;
+$brk-semi-x-huge: 1192px;
 $brk-huge: 1080px;
 $brk-large: 824px;
 $brk-medium: 720px;
