--- a/assets/static/sass/components/post/_toc.scss
+++ b/assets/static/sass/components/post/_toc.scss
@@ -17,7 +17,7 @@
       max-height: 40vh;
     }
 
-    @include brk-down($brk-huge) {
+    @include brk-down($brk-semi-x-huge) {
       display: none;
     }
 
