--- a/assets/static/sass/helper/_variables.scss
+++ b/assets/static/sass/helper/_variables.scss
@@ -3,6 +3,7 @@ $placeholder-color: rgb(255, 191, 191);
 $navbar-text-color: rgb(18, 58, 110);
 
 $banner-title-color: rgb(211, 248, 228);
+$banner-title-color2: rgb(211, 255, 238);
 $banner-outer-color: rgba(0, 79, 168, 0.3);
 $banner-inner-color: rgba(0, 0, 0, 0.1);
 
@@ -100,6 +101,7 @@ $post-font: "Maven Pro", "FakePearl", sans-serif;
 $brand-font: "Comfortaa", "Maven Pro", "FakePearl", sans-serif;
 $mono-font: "Ubuntu Mono", "FakePearl", monospace;
 $title-font: "Exo 2", "Maven Pro", "Noto Sans TC", sans-serif;
+$title-motto-font: "Kalam", "Maven Pro", "Noto Sans TC", sans-serif;
 $icon-font: "Font Awesome 5 Free", "Maven Pro", "Noto Sans TC", sans-serif;
 
 $brk-x-huge: 1296px;
