--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,8 @@
 {% block title %}skyblog - Welcome{% endblock %}
 {% block banner %}
   <div class="foreground">
-    <h1>Le Ciel</h1>
+    <h1>skyblog</h1>
+    <h2>Soyons le ciel.</h2>
   </div>
 {% endblock %}
 
