--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,6 +14,7 @@
   <meta name="theme-color" content="#ffffff">
 
   <link rel="stylesheet" href="{{ '/static/style.css'|url }}">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com"/>
   <link
     href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;700&display=swap"
@@ -35,6 +36,7 @@
     href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital@0;1&display=swap"
     rel="stylesheet"
   />
+  <link href="https://fonts.googleapis.com/css2?family=Kalam&display=swap" rel="stylesheet">
   <link
     rel="stylesheet"
     href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
