[UPDATE] prototype design for portfolio page

--- a/assets/static/sass/_style.scss
+++ b/assets/static/sass/_style.scss
@@ -39,6 +39,7 @@
 @import "./components/post/table";
 
 @import "./components/portfolio/banner";
+@import "./components/portfolio/card";
 
 @import "./components/error_404/banner";
 
