--- a/assets/static/sass/helper/_variables.scss
+++ b/assets/static/sass/helper/_variables.scss
@@ -67,6 +67,8 @@ $portfolio-banner-color2: rgb(255, 253, 158);
 $portfolio-banner-color3: rgb(228, 159, 245);
 $portfolio-title-color: rgb(116, 7, 7);
 $portfolio-color: rgb(248, 248, 248);
+$portfolio-card-color: rgb(223, 200, 190);
+$portfolio-card-hover-color: rgb(105, 76, 69);
 
 $error404-banner-color1: rgb(190, 190, 190);
 $error404-banner-color2: rgb(247, 247, 247);
