--- a/assets/static/sass/layout/_portfolio.scss
+++ b/assets/static/sass/layout/_portfolio.scss
@@ -3,14 +3,35 @@
     display: flex;
     justify-content: center;
     background-color: $portfolio-color;
-    // font-family: $post-font;
+    font-family: $post-font;
   }
 
   .main-wrapper {
-    margin: 3rem 0;
-    height: 80vh;
+    margin-bottom: 2rem;
+    min-height: 80vh;
     padding: 2rem;
     flex-basis: 1080px;
     color: $postpage-ui-color;
+
+    h2 {
+      margin: 2rem 0;
+      font-size: 2rem;
+    }
+
+    .featured-project, .all-project {
+      display: grid;
+      gap: 1.8rem 1.2rem;
+      padding-bottom: 1rem;
+    }
+
+    .featured-project {
+      grid-template-columns: repeat(3, minmax(0, 1fr));
+      grid-template-rows: 550px;
+    }
+
+    .all-project {
+      grid-template-columns: repeat(4, minmax(0, 1fr));
+      grid-auto-rows: 360px;
+    }
   }
 }
