--- a/assets/static/style.css
+++ b/assets/static/style.css
@@ -2258,6 +2258,73 @@ aside nav > ul .collapsible-category ul a {
   }
 }
 
+.portfolio .main-wrapper .project-card {
+  text-decoration: none;
+  color: #5c443a;
+  border: 1px solid #dfc8be;
+  border-radius: 5px;
+  transition: all 0.3s;
+}
+.portfolio .main-wrapper .project-card:hover {
+  background-color: rgba(105, 76, 69, 0.65);
+  color: #f8f8f8;
+}
+.portfolio .main-wrapper .project-card .intro {
+  padding: 0.8rem 1.2rem;
+}
+.portfolio .main-wrapper .project-card .intro h3 {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+.portfolio .main-wrapper .project-card .intro p {
+  margin: 0;
+  font-size: 1.3rem;
+  line-height: 1.3;
+  overflow-y: hidden;
+  text-overflow: ellipsis;
+  overflow-wrap: anywhere;
+}
+
+.portfolio .featured-project .project-card img {
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+}
+.portfolio .featured-project .project-card .intro h3 {
+  margin: 0 0 1rem 0;
+  font-size: 1.6rem;
+}
+.portfolio .featured-project .project-card .intro p {
+  max-height: 220px;
+}
+.portfolio .all-project .project-card img {
+  width: 100%;
+  height: 150px;
+  object-fit: cover;
+}
+.portfolio .all-project .project-card .intro h3 {
+  margin: 0 0 0.75rem 0;
+  font-size: 1.4rem;
+}
+.portfolio .all-project .project-card .intro p {
+  max-height: 140px;
+}
+.portfolio .all-project .project-card:last-child {
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(105, 76, 69, 0.5);
+  color: #f8f8f8;
+  font-size: 1.5rem;
+  font-family: "Maven Pro", "Noto Sans TC", sans-serif;
+  line-height: 1.4;
+}
+.portfolio .all-project .project-card:last-child:hover {
+  background-color: rgba(105, 76, 69, 0.8);
+}
+
 .error-404 .banner {
   height: 40vh;
   position: relative;
@@ -2555,13 +2622,31 @@ aside nav > ul .collapsible-category ul a {
   display: flex;
   justify-content: center;
   background-color: #f8f8f8;
+  font-family: "Maven Pro", "FakePearl", sans-serif;
 }
 .portfolio .main-wrapper {
-  margin: 3rem 0;
-  height: 80vh;
+  margin-bottom: 2rem;
+  min-height: 80vh;
   padding: 2rem;
   flex-basis: 1080px;
   color: #5c443a;
+}
+.portfolio .main-wrapper h2 {
+  margin: 2rem 0;
+  font-size: 2rem;
+}
+.portfolio .main-wrapper .featured-project, .portfolio .main-wrapper .all-project {
+  display: grid;
+  gap: 1.8rem 1.2rem;
+  padding-bottom: 1rem;
+}
+.portfolio .main-wrapper .featured-project {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+  grid-template-rows: 550px;
+}
+.portfolio .main-wrapper .all-project {
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+  grid-auto-rows: 360px;
 }
 
 .error-404 main {
