--- a/assets/static/sass/layout/_homepage.scss
+++ b/assets/static/sass/layout/_homepage.scss
@@ -45,11 +45,12 @@
 
       @include brk-down($brk-huge) {
         grid-template-columns: repeat(2, minmax(0,  1fr));
+        grid-template-rows: 1fr 1fr 1fr;
       }
 
       @include brk-down($brk-small) {
         grid-template-columns: minmax(0,  1fr);
-        grid-template-rows: 0.6fr 1fr;
+        grid-template-rows: 0.6fr 1fr 1fr;
       }
 
       @include brk-down($brk-tiny) {
