--- a/assets/static/sass/components/portfolio/_card.scss
+++ b/assets/static/sass/components/portfolio/_card.scss
@@ -11,7 +11,7 @@
 
   @include brk-down($brk-tiny) {
     border-radius: 0;
-    
+
     img {
       border-radius: 0;
     }
@@ -63,6 +63,11 @@
   }
 
   .all-project .project-card {
+
+    @include brk-down($brk-tiny) {
+      flex: 0 0 320px;
+    }
+
     img {
       width: 100%;
       height: 150px;
@@ -77,6 +82,10 @@
 
       p {
         max-height: 140px;
+
+        @include brk-down($brk-tiny) {
+          max-height: 100px;
+        }
       }
     }
 
@@ -101,7 +110,7 @@
       }
 
       @include brk-down($brk-tiny) {
-        height: 6rem;
+        flex-basis: 6rem;
         background-color: unset;
         border: none;
         font-size: 1.2rem;
