--- a/assets/static/sass/layout/_homepage.scss
+++ b/assets/static/sass/layout/_homepage.scss
@@ -50,10 +50,11 @@
 
       @include brk-down($brk-small) {
         grid-template-columns: minmax(0,  1fr);
-        grid-template-rows: 0.6fr 1fr 1fr;
+        grid-template-rows: 0.6fr repeat(4, 1fr);
       }
 
       @include brk-down($brk-tiny) {
+        grid-template-rows: 0.6fr repeat(2, 1fr);
         padding: 5rem 1.2rem;
       }
     }
