--- a/assets/static/sass/layout/_portfolio.scss
+++ b/assets/static/sass/layout/_portfolio.scss
@@ -58,7 +58,8 @@
         grid-template-columns: repeat(2, minmax(0, 1fr));
       }
       @include brk-down($brk-tiny) {
-        grid-template-columns: minmax(0, 1fr);
+        display: flex;
+        flex-flow: column;
       }
     }
   }
