--- a/assets/static/style.css
+++ b/assets/static/style.css
@@ -2310,6 +2310,11 @@ aside nav > ul .collapsible-category ul a {
     max-height: 168px;
   }
 }
+@media (max-width: 480px) {
+  .portfolio .all-project .project-card {
+    flex: 0 0 320px;
+  }
+}
 .portfolio .all-project .project-card img {
   width: 100%;
   height: 150px;
@@ -2321,6 +2326,11 @@ aside nav > ul .collapsible-category ul a {
 }
 .portfolio .all-project .project-card .intro p {
   max-height: 140px;
+}
+@media (max-width: 480px) {
+  .portfolio .all-project .project-card .intro p {
+    max-height: 100px;
+  }
 }
 .portfolio .all-project .project-card:last-child {
   text-align: center;
@@ -2343,7 +2353,7 @@ aside nav > ul .collapsible-category ul a {
 }
 @media (max-width: 480px) {
   .portfolio .all-project .project-card:last-child {
-    height: 6rem;
+    flex-basis: 6rem;
     background-color: unset;
     border: none;
     font-size: 1.2rem;
@@ -2458,11 +2468,12 @@ aside nav > ul .collapsible-category ul a {
 @media (max-width: 668px) {
   .home .content .content-wrapper {
     grid-template-columns: minmax(0, 1fr);
-    grid-template-rows: 0.6fr 1fr 1fr;
+    grid-template-rows: 0.6fr repeat(4, 1fr);
   }
 }
 @media (max-width: 480px) {
   .home .content .content-wrapper {
+    grid-template-rows: 0.6fr repeat(2, 1fr);
     padding: 5rem 1.2rem;
   }
 }
@@ -2713,7 +2724,8 @@ aside nav > ul .collapsible-category ul a {
 }
 @media (max-width: 480px) {
   .portfolio .main-wrapper .all-project {
-    grid-template-columns: minmax(0, 1fr);
+    display: flex;
+    flex-flow: column;
   }
 }
 
