[UPDATE] the project block in home

--- a/assets/static/sass/components/homepage/_about.scss
+++ b/assets/static/sass/components/homepage/_about.scss
@@ -138,4 +138,14 @@
       }
     }
   }
+
+  .card.project-card {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    h3 {
+      font-size: 2rem;
+    }
+  }
 }
