--- a/templates/home.html
+++ b/templates/home.html
@@ -75,10 +75,9 @@
             {% endfor %}
           </p>
         </div>
-        <div class="card project-card">
-          <h3>Projects</h3>
-          <p class="preview">Coming soon</p>
-        </div>
+        <a href="{{ './portfolio'|url }}" class="card project-card">
+          <h3><i class="fas fa-cube"></i> Projects</h3>
+        </a>
       </div>
     </section>
   </section>
