--- a/assets/static/sass/layout/_homepage.scss
+++ b/assets/static/sass/layout/_homepage.scss
@@ -56,6 +56,10 @@
       @include brk-down($brk-tiny) {
         grid-template-rows: 0.6fr repeat(2, 1fr);
         padding: 5rem 1.2rem;
+
+        &.about {
+          grid-template-rows: 0.6fr repeat(4, 1fr);
+        }
       }
     }
   }
