--- a/assets/static/style.css
+++ b/assets/static/style.css
@@ -2484,6 +2484,9 @@ aside nav > ul .collapsible-category ul a {
     grid-template-rows: 0.6fr repeat(2, 1fr);
     padding: 5rem 1.2rem;
   }
+  .home .content .content-wrapper.about {
+    grid-template-rows: 0.6fr repeat(4, 1fr);
+  }
 }
 
 .articles main {
