--- a/assets/static/sass/layout/_portfolio.scss
+++ b/assets/static/sass/layout/_portfolio.scss
@@ -9,6 +9,7 @@
   .main-wrapper {
     margin-bottom: 2rem;
     min-height: 80vh;
+    min-width: 0;
     padding: 2rem 3rem;
     flex-basis: 1080px;
     color: $postpage-ui-color;
@@ -47,15 +48,14 @@
     }
 
     .all-project {
-      grid-template-columns: repeat(4, minmax(0, 1fr));
-      grid-auto-rows: 360px;
+      display: flex;
+      flex-flow: column;
 
-      @include brk-down($brk-huge) {
-        grid-template-columns: repeat(3, minmax(0, 1fr));
-      }
-      @include brk-down($brk-medium) {
+      @include brk-down($brk-small) {
+        display: grid;
         gap: 1rem;
         grid-template-columns: repeat(2, minmax(0, 1fr));
+        grid-auto-rows: 400px;
       }
       @include brk-down($brk-tiny) {
         display: flex;
