--- a/assets/static/style.css
+++ b/assets/static/style.css
@@ -2286,6 +2286,8 @@ aside nav > ul .collapsible-category ul a {
 }
 .portfolio .main-wrapper .project-card .intro {
   padding: 0.8rem 1.2rem;
+  min-width: 0;
+  min-height: 0;
 }
 .portfolio .main-wrapper .project-card .intro h3 {
   overflow: hidden;
@@ -2296,6 +2298,7 @@ aside nav > ul .collapsible-category ul a {
   margin: 0;
   font-size: 1.3rem;
   line-height: 1.3;
+  min-height: 0;
   overflow-y: hidden;
   text-overflow: ellipsis;
   overflow-wrap: anywhere;
@@ -2318,15 +2321,38 @@ aside nav > ul .collapsible-category ul a {
     max-height: 168px;
   }
 }
+.portfolio .all-project .project-card {
+  flex: 0 0 200px;
+  max-height: 200px;
+}
+.portfolio .all-project .project-card article {
+  display: flex;
+  height: 100%;
+}
 @media (max-width: 480px) {
   .portfolio .all-project .project-card {
-    flex: 0 0 320px;
+    flex: 0 0 360px;
   }
 }
 .portfolio .all-project .project-card img {
-  width: 100%;
-  height: 150px;
+  height: 100%;
+  width: 220px;
   object-fit: cover;
+}
+@media (max-width: 668px) {
+  .portfolio .all-project .project-card {
+    max-height: none;
+  }
+  .portfolio .all-project .project-card article {
+    flex-flow: column;
+  }
+  .portfolio .all-project .project-card img {
+    width: 100%;
+    height: 180px;
+  }
+}
+.portfolio .all-project .project-card .intro {
+  flex: 1;
 }
 .portfolio .all-project .project-card .intro h3 {
   margin: 0 0 0.75rem 0;
@@ -2337,7 +2363,7 @@ aside nav > ul .collapsible-category ul a {
 }
 @media (max-width: 480px) {
   .portfolio .all-project .project-card .intro p {
-    max-height: 100px;
+    max-height: 110px;
   }
 }
 .portfolio .all-project .project-card:last-child {
@@ -2345,11 +2371,16 @@ aside nav > ul .collapsible-category ul a {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: rgba(105, 76, 69, 0.5);
-  color: #f8f8f8;
+  flex-basis: 0;
+  padding: 1rem 2rem;
+  align-self: end;
   font-size: 1.4rem;
   font-family: "Maven Pro", "Noto Sans TC", sans-serif;
   line-height: 1.4;
+}
+.portfolio .all-project .project-card:last-child h3 {
+  margin: 0;
+  font-size: 1.2rem;
 }
 .portfolio .all-project .project-card:last-child:hover {
   background-color: rgba(105, 76, 69, 0.8);
@@ -2680,6 +2711,7 @@ aside nav > ul .collapsible-category ul a {
 .portfolio .main-wrapper {
   margin-bottom: 2rem;
   min-height: 80vh;
+  min-width: 0;
   padding: 2rem 3rem;
   flex-basis: 1080px;
   color: #5c443a;
@@ -2719,18 +2751,15 @@ aside nav > ul .collapsible-category ul a {
   }
 }
 .portfolio .main-wrapper .all-project {
-  grid-template-columns: repeat(4, minmax(0, 1fr));
-  grid-auto-rows: 360px;
+  display: flex;
+  flex-flow: column;
 }
-@media (max-width: 1080px) {
+@media (max-width: 668px) {
   .portfolio .main-wrapper .all-project {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
-  }
-}
-@media (max-width: 720px) {
-  .portfolio .main-wrapper .all-project {
+    display: grid;
     gap: 1rem;
     grid-template-columns: repeat(2, minmax(0, 1fr));
+    grid-auto-rows: 400px;
   }
 }
 @media (max-width: 480px) {
