[UPDATE] better styling for article lists & post pages

--- a/assets/static/sass/components/_pagination.scss
+++ b/assets/static/sass/components/_pagination.scss
@@ -1,7 +1,7 @@
 .pagination {
   display: flex;
   justify-content: center;
-  background-color: $articles-page-color;
+  background-color: $default-page-color;
   padding-bottom: 2rem;
 
   a {
