--- a/templates/post.html
+++ b/templates/post.html
@@ -1,5 +1,5 @@
 {% extends "layout-normal.html" %}
-{% from "macros/post.html" import render_post %}
+{% from "macros/post.html" import render_post, render_info %}
 {% block title %}{{ this.title }} - skyblog{% endblock %}
 {% block head %}
   <link
