--- a/assets/static/sass/components/articles/_post.scss
+++ b/assets/static/sass/components/articles/_post.scss
@@ -7,51 +7,21 @@
     color: $articles-ui-color;
 
     cursor: pointer;
-    transition: color 0.5s, background-color 0.5s;
-
-    &:nth-of-type(4n + 1) {
-      grid-column: 1 / 3;
-
-      @include brk-down($brk-large) {
-        grid-column: 1 / 1;
-      }
-    }
-
-    &:nth-of-type(4n) {
-      grid-column: 2 / 4;
-
-      @include brk-down($brk-large) {
-        grid-column: 1 / 1;
-      }
-    }
+    transition: all 0.5s;
 
     &:hover {
-      color: $articles-page-color;
+      color: $articles-ui-hover-color;
+
       time {
-        color: $articles-page-color;
+        color: $articles-ui-hover-color;
       }
     }
 
     @include brk-up($brk-large) {
-      &:nth-of-type(3n) {
-        background-color: $post-color0;
-        &:hover {
-          background-color: $post-hover-color0;
-        }
-      }
+      background-color: $post-color0;
 
-      &:nth-of-type(3n + 1) {
-        background-color: $post-color1;
-        &:hover {
-          background-color: $post-hover-color1;
-        }
-      }
-
-      &:nth-of-type(3n + 2) {
-        background-color: $post-color2;
-        &:hover {
-          background-color: $post-hover-color2;
-        }
+      &:hover {
+        background-color: $post-hover-color0;
       }
     }
 
@@ -65,8 +35,16 @@
 
   article {
     flex: 1;
-    padding: 0.8rem 1.2rem;
+    padding: 1rem 1.5rem 1.4rem;
     overflow-y: hidden;
+
+    border-bottom: 1px solid $post-handle-color;
+
+    transition: all 0.5s;
+
+    &:hover {
+      border-bottom-color: $post-handle-hover-color;
+    }
 
     .info {
       display: flex;
@@ -104,12 +82,12 @@
 
   .preview {
     margin: 0;
-    height: 12rem;
+    height: 6rem;
     overflow: hidden;
     overflow-wrap: anywhere;
 
     font-family: $post-font;
-    font-size: 1.3rem;
+    font-size: 1.4rem;
     line-height: 1.5;
 
     @include brk-down($brk-tiny) {
