--- a/assets/static/sass/helper/_variables.scss
+++ b/assets/static/sass/helper/_variables.scss
@@ -27,9 +27,12 @@ $about-card-hover-color: rgb(19, 95, 70);
 $about-card-link-color: rgb(246, 255, 169);
 $more-card-hover-color: $default-ui-color;
 
-$articles-page-color: rgb(244, 249, 255);
+$default-page-color: rgb(250, 250, 250);
+
+$articles-page-color: rgb(249, 252, 255);
 $articles-breadcrumb-color: rgb(233, 241, 251);
-$articles-ui-color: rgb(9, 36, 61);
+$articles-ui-color: rgb(69, 93, 114);
+$articles-ui-hover-color: rgb(30, 55, 77);
 $articles-title-color: rgb(3, 48, 26);
 $articles-banner-color1: rgb(140, 251, 255);
 $articles-banner-color2: rgb(255, 220, 196);
@@ -39,10 +42,12 @@ $pagination-active-color: rgb(30, 100, 183);
 $pagination-hover-color: rgb(180, 210, 255);
 $pagination-disabled-color: rgb(138, 169, 218);
 
-$post-color0: rgb(220, 236, 255);
+$post-color0: rgb(238, 246, 255);
 $post-color1: rgb(204, 228, 255);
 $post-color2: rgb(195, 222, 255);
-$post-hover-color0: rgb(46, 81, 128);
+$post-handle-color: rgb(131, 173, 214);
+$post-handle-hover-color: rgb(46, 104, 162);
+$post-hover-color0: rgb(224, 237, 249);
 $post-hover-color1: rgb(29, 66, 112);
 $post-hover-color2: rgb(55, 105, 158);
 
