--- a/assets/static/style.css
+++ b/assets/static/style.css
@@ -743,7 +743,7 @@ aside nav > ul .collapsible-category ul a {
 .pagination {
   display: flex;
   justify-content: center;
-  background-color: #f4f9ff;
+  background-color: #fafafa;
   padding-bottom: 2rem;
 }
 .pagination a {
@@ -752,7 +752,7 @@ aside nav > ul .collapsible-category ul a {
   border-radius: 8px;
   text-decoration: none;
   font-size: 1.2rem;
-  color: #09243d;
+  color: #455d72;
   transition: background-color 0.4s;
 }
 .pagination a:nth-of-type(n + 2) {
@@ -765,7 +765,7 @@ aside nav > ul .collapsible-category ul a {
   background-color: inherit;
 }
 .pagination a.active {
-  color: #f4f9ff;
+  color: #f9fcff;
   background-color: #1e64b7;
 }
 .pagination a.active:hover {
@@ -1336,64 +1336,41 @@ aside nav > ul .collapsible-category ul a {
   display: flex;
   align-items: stretch;
   text-decoration: none;
-  color: #09243d;
+  color: #455d72;
   cursor: pointer;
-  transition: color 0.5s, background-color 0.5s;
-}
-.articles main .main-wrapper a.post-link:nth-of-type(4n + 1) {
-  grid-column: 1/3;
-}
-@media (max-width: 824px) {
-  .articles main .main-wrapper a.post-link:nth-of-type(4n + 1) {
-    grid-column: 1/1;
-  }
-}
-.articles main .main-wrapper a.post-link:nth-of-type(4n) {
-  grid-column: 2/4;
-}
-@media (max-width: 824px) {
-  .articles main .main-wrapper a.post-link:nth-of-type(4n) {
-    grid-column: 1/1;
-  }
+  transition: all 0.5s;
 }
 .articles main .main-wrapper a.post-link:hover {
-  color: #f4f9ff;
+  color: #1e374d;
 }
 .articles main .main-wrapper a.post-link:hover time {
-  color: #f4f9ff;
+  color: #1e374d;
 }
 @media (min-width: 824px) {
-  .articles main .main-wrapper a.post-link:nth-of-type(3n) {
-    background-color: #dcecff;
+  .articles main .main-wrapper a.post-link {
+    background-color: #eef6ff;
   }
-  .articles main .main-wrapper a.post-link:nth-of-type(3n):hover {
-    background-color: #2e5180;
-  }
-  .articles main .main-wrapper a.post-link:nth-of-type(3n + 1) {
-    background-color: #cce4ff;
-  }
-  .articles main .main-wrapper a.post-link:nth-of-type(3n + 1):hover {
-    background-color: #1d4270;
-  }
-  .articles main .main-wrapper a.post-link:nth-of-type(3n + 2) {
-    background-color: #c3deff;
-  }
-  .articles main .main-wrapper a.post-link:nth-of-type(3n + 2):hover {
-    background-color: #37699e;
+  .articles main .main-wrapper a.post-link:hover {
+    background-color: #e0edf9;
   }
 }
 @media (max-width: 824px) {
   .articles main .main-wrapper a.post-link {
-    background-color: #dcecff;
+    background-color: #eef6ff;
   }
   .articles main .main-wrapper a.post-link:hover {
-    background-color: #2e5180;
+    background-color: #e0edf9;
   }
 }
 .articles main .main-wrapper article {
   flex: 1;
-  padding: 0.8rem 1.2rem;
+  padding: 1rem 1.5rem 1.4rem;
   overflow-y: hidden;
+  border-bottom: 1px solid #83add6;
+  transition: all 0.5s;
+}
+.articles main .main-wrapper article:hover {
+  border-bottom-color: #2e68a2;
 }
 .articles main .main-wrapper article .info {
   display: flex;
@@ -1420,7 +1397,7 @@ aside nav > ul .collapsible-category ul a {
 .articles main .main-wrapper article time {
   font-size: 1.1rem;
   margin-top: 0.2rem;
-  color: rgba(9, 36, 61, 0.7);
+  color: rgba(69, 93, 114, 0.7);
   transition: color 0.5s;
 }
 @media (max-width: 480px) {
@@ -1430,11 +1407,11 @@ aside nav > ul .collapsible-category ul a {
 }
 .articles main .main-wrapper .preview {
   margin: 0;
-  height: 12rem;
+  height: 6rem;
   overflow: hidden;
   overflow-wrap: anywhere;
   font-family: "Maven Pro", "FakePearl", sans-serif;
-  font-size: 1.3rem;
+  font-size: 1.4rem;
   line-height: 1.5;
 }
 @media (max-width: 480px) {
@@ -1522,14 +1499,14 @@ aside nav > ul .collapsible-category ul a {
 .articles .breadcrumb-wrapper .breadcrumb {
   padding: 0.8rem 1.2rem;
   border-radius: 8px;
-  color: rgba(9, 36, 61, 0.8);
+  color: rgba(69, 93, 114, 0.8);
   font-size: 1.2rem;
   background-color: #e9f1fb;
 }
 .articles .breadcrumb-wrapper .breadcrumb span:after {
   content: "/";
   margin: 0 0.6rem;
-  color: rgba(9, 36, 61, 0.4);
+  color: rgba(69, 93, 114, 0.4);
 }
 
 .postpage article .post-content {
@@ -2524,8 +2501,8 @@ aside nav > ul .collapsible-category ul a {
   padding-top: 3rem;
   display: grid;
   flex-flow: column;
-  background-color: #f4f9ff;
-  color: #09243d;
+  background-color: #f9fcff;
+  color: #455d72;
 }
 .articles .main-wrapper {
   padding: 2rem 3rem 2rem;
@@ -2533,13 +2510,12 @@ aside nav > ul .collapsible-category ul a {
   width: 100%;
   margin: 0 auto;
   display: grid;
-  grid-template-columns: repeat(3, minmax(0, 1fr));
+  grid-template-columns: minmax(0, 1fr);
   grid-auto-rows: minmax(0, auto);
-  gap: 0.2rem 0.2rem;
+  gap: 2rem 0.2rem;
 }
 @media (max-width: 824px) {
   .articles .main-wrapper {
-    grid-template-columns: minmax(0, 1fr);
     padding: 3rem 2.4rem;
     row-gap: 0.5rem;
   }
@@ -2575,21 +2551,24 @@ aside nav > ul .collapsible-category ul a {
   background-color: rgba(92, 68, 58, 0.2);
 }
 .postpage main article {
-  margin: 3rem 0 3rem -4rem;
-  padding: 2rem 5rem 2rem 0;
-  flex-basis: 1080px;
+  margin: 3rem 2rem;
+  padding: 2rem 6rem;
+  flex: 1;
   color: #5c443a;
+}
+.postpage main article .article-wrapper {
+  max-width: 1080px;
 }
 @media (max-width: 1296px) {
   .postpage main article {
-    margin-left: 3rem;
+    margin-left: 0;
     margin-top: 2rem;
     flex-basis: 960px;
   }
 }
 @media (max-width: 1080px) {
   .postpage main article {
-    margin-left: 0;
+    margin-right: 0;
     padding: 1.2rem 3rem;
     flex: 1;
     min-width: 0;
@@ -2632,6 +2611,8 @@ aside nav > ul .collapsible-category ul a {
   }
 }
 .postpage main article .title {
+  display: flex;
+  position: relative;
   margin: 0;
   margin-right: auto;
   font-size: 2.4rem;
@@ -2640,6 +2621,13 @@ aside nav > ul .collapsible-category ul a {
   font-size: 1.8rem;
   margin-right: 0.8rem;
   color: rgba(92, 68, 58, 0.6);
+  position: relative;
+  top: 0.7rem;
+}
+@media (max-width: 480px) {
+  .postpage main article .title i {
+    display: none;
+  }
 }
 @media (max-width: 1080px) {
   .postpage main article .title {
