--- a/assets/static/sass/layout/_post.scss
+++ b/assets/static/sass/layout/_post.scss
@@ -25,9 +25,10 @@
 
       .article-wrapper {
         max-width: 1080px;
-        padding-right: 4rem;
+        padding: 0 4rem 0 2rem;
 
         @include brk-down($brk-x-huge) {
+          padding-left: 0;
           padding-right: 0;
         }
       }
