--- a/assets/static/style.css
+++ b/assets/static/style.css
@@ -2558,10 +2558,11 @@ aside nav > ul .collapsible-category ul a {
 }
 .postpage main article .article-wrapper {
   max-width: 1080px;
-  padding-right: 4rem;
+  padding: 0 4rem 0 2rem;
 }
 @media (max-width: 1296px) {
   .postpage main article .article-wrapper {
+    padding-left: 0;
     padding-right: 0;
   }
 }
