[UPDATE] table hover style

--- a/assets/static/sass/components/post/_table.scss
+++ b/assets/static/sass/components/post/_table.scss
@@ -23,6 +23,10 @@
 
       tr:hover td {
         background-color: rgba($postpage-table-td-color, 0.4);
+
+        &:hover {
+          background-color: rgba($postpage-table-td-color, 0.6);
+        }
       }
     }
   }
